# alfred_ws

./: .gitignore  README.md  commands_for_my_ref.txt  install_packages.sh  install_ros2_jazzy.sh
src/alfed_robot/: CMakeLists.txt  package.xml
src/alfed_sim/: CMakeLists.txt  package.xml
src/alfred_firmware/: CMakeLists.txt  alfred_interface.xml  package.xml
src/alfred_firmware/include/alfred_firmware/: alfred_interface.hpp
src/alfred_firmware/src/: alfred_interface.cpp
src/alfred_firmware/teensy_firmware/: rtROStoRPMwoPID.ino
src/alfred_robot/: CMakeLists.txt  package.xml
src/alfred_robot/config/: laser_filter.yaml  my_controllers.yaml  nav2_params.yaml
src/alfred_robot/description/: lidar.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  xacro_empty.xacro
src/alfred_robot/launch/: launch_robot.launch.py  localization_launch.py  localization_launch_initial.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
src/alfred_robot/maps/: small_room.pgm  small_room.yaml
src/alfred_sim/: CMakeLists.txt  package.xml
src/alfred_sim/config/: ekf.yaml  gz_bridge.yaml  my_controllers.yaml  nav2_params.yaml
src/alfred_sim/description/: camera.xacro  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  material.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  xacro_empty.xacro
src/alfred_sim/launch/: launch_autonav.py  launch_mapping.launch.py  launch_savemap.py  launch_sim.launch.py  localization_launch.py  localization_launch_initial.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
src/alfred_sim/maps/: halfMap.pgm  halfMap.yaml  my_home.pgm  my_home.yaml  partial_home.pgm  partial_home.yaml
src/alfred_sim/rviz/: view_bot.rviz
src/aws-robomaker-small-house-world/: CMakeLists.txt
src/aws-robomaker-small-house-world/launch/: small_house.launch.py
src/aws-robomaker-small-house-world/param/: waffle_pi.yaml
src/input_from_joystick/: package.xml  setup.cfg  setup.py
src/serial_comm_cpp_teensy/: CMakeLists.txt  package.xml
src/serial_comm_cpp_teensy/src/: serial_comm_cpp_teensy.cpp
src/stamp_and_redirect/: package.xml  setup.cfg  setup.py
(+4 files in other folders)
